🪵 Wooden Items fix